<resources>
    <string name="app_name">iOS DevUK</string>
    <string name="nav_open_drawer">Open nav drawer</string>
    <string name="nav_close_drawer">Close nav drawer</string>
    <string name="hello_blank_fragment">This is blank</string>
    <string name="home_tab">Home</string>
    <string name="favourites_tab">Favourites</string>
    <string name="events_tab">Events</string>
    <string name="nav_header_image_description">Conference Logo</string>
    <string name="nav_home">Home</string>
    <string name="nav_events">Events</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_speakers">Speakers</string>
    <string name="nav_locations">Locations</string>
    <string name="nav_settings">Settings</string>
    <string name="cardFavouriteButton">Favourite</string>
    <string name="defaultCardTitle">iOS Development</string>
    <string name="defaultCardSpeakerName">Chris Price</string>
    <string name="defaultCardTime">10:00 – 11:00</string>
    <string name="defaultCardLocation">The Orchard B57</string>
    <string name="defaultCardDate">10/10/2019</string>
    <string name="cardExpandButton">Expand this card</string>
    <string name="cardBreakTitle">Break</string>
    <string name="homeRecycleViewTitle">Next 3 Events:</string>
    <string name="cardDetailsButton">Show Details</string>
    <string name="speakers_tab">Speakers</string>
    <string name="locations_tab">Locations</string>
    <string name="defaultCardTwitterHandle">\@ChrisPrice</string>
    <string name="nav_permissions">Permissions</string>
    <string name="cardRegistrationTitle">Registration</string>
    <string name="cardWorkshopTitle">Workshop</string>
    <string name="defaultEventDetailDetails">ARKit is the hot new framework announced at WWDC 2017. This workshop will get your feet wet so that you can create the augmented reality application of your dreams.</string>
    <string name="eventDetailSpeakerGridSpeakerNameDefault">Speaker: Adam Rush</string>
    <string name="eventDetailSpeakerGridSpeakerImageContentDescription">Speaker Image</string>
    <string name="eventDetailSpeakerGridSpeakerDetails"><![CDATA[Adam Rush is a passionate iOS developer with over 6 years commercial experience, contracting all over the UK & Europe. He\'s a tech addict and #Swift enthusiast.]]></string>
    <string name="twitterIconDescription">Twitter Icon</string>
    <string name="eventDetailSpeakerGridTwitterHandleDefault">\@adam9rush</string>
    <string name="title_activity_maps">Map</string>
    <string name="eventDetailsTimeDefault">Time: 16th Jan, 09:00</string>
    <string name="eventDetailLocationDefault">Location: Llandinam B23</string>
    <string name="eventDetailDescriptionTitle">Description:</string>
    <string name="eventDetailsNextButton">Go to…</string>
    <string name="eventDetailSpeaker">Speaker: </string>
    <string name="eventDetailTime">Time: </string>
    <string name="eventDetailLocation">Location:</string>
    <string name="speakerActivitySpeakerImageDescription">Speaker Image</string>
    <string name="speakerActivitySpeakerTitle">Speaker</string>
    <string name="twitter_handle">Twitter Handle:</string>
    <string name="speakerActivitySpeakerDetails">Speaker Details:</string>
    <string name="permissions">Permissions</string>
    <string name="twitterIconPerms">Credit for the Twitter Icon goes to Austin Andrews, @templarian on twitter.</string>
    <string name="iOSIconPerms">Credit for the iOS Icon used in the logo goes to Austin Andrews, @templarian on twitter.</string>
</resources>
