<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:columnOrderPreserved="true"
        android:rowCount="3"
        android:rowOrderPreserved="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cardImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="0.15"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <TextView
            android:id="@+id/cardTitleText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="0.6"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="0.5"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/defaultCardTitle"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cardSpeakerName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="0.3"
            android:layout_column="1"
            android:layout_columnWeight="0.25"
            android:ellipsize="end"
            android:text="@string/defaultCardSpeakerName" />

        <TextView
            android:id="@+id/cardTime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:layout_column="1"
            android:layout_columnWeight="0.25"
            android:ellipsize="end"
            android:text="@string/defaultCardTime" />

        <TextView
            android:id="@+id/cardLocation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="0.3"
            android:layout_column="2"
            android:layout_columnWeight="0.25"
            android:ellipsize="end"
            android:text="@string/defaultCardLocation" />

        <TextView
            android:id="@+id/cardDate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="0.2"
            android:layout_column="2"
            android:layout_columnWeight="0.25"
            android:ellipsize="end"
            android:text="@string/defaultCardDate" />

        <ImageView
            android:id="@+id/cardFavouriteButton"
            android:layout_width="24dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="0.2"
            android:layout_column="3"
            android:layout_columnWeight="0.02"
            android:contentDescription="@string/cardFavouriteButton"
            android:src="@drawable/ic_favorite_border_black_24dp" />

        <ImageView
            android:id="@+id/cardDetailsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:layout_rowWeight="0.8"
            android:layout_column="3"
            android:layout_columnWeight="0.02"
            android:contentDescription="@string/cardDetailsButton"
            android:src="@drawable/ic_navigate_next_black_24dp" />

    </GridLayout>

</com.google.android.material.card.MaterialCardView>